# miniransac

./: CMakeLists.txt  README.md  main.cpp  ransac.cpp  ransac.h
demo/: output.txt  ransac  sample_points.csv
